# service/src/main/resources/api.yml
@@ -96,6 +96,31 @@ paths:
         422:
           $ref: '#/components/responses/UnprocessableEntity'
 
+  /allocations:
+    post:
+      summary: 'Creates an allocation'
+      operationId: createAllocation
+      tags:
+        - allocattion
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/CreateAllocationDTO'
+        required: true
+      responses:
+        201:
+          description: Created
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/AllocationDTO'
+        422:
+          $ref: '#/components/responses/UnprocessableEntity'
+        404:
+          description: Not Found
+
+
 components:
   schemas:
     UpdateRoomDTO:
@@ -119,6 +144,37 @@ components:
             id:
               type: integer
               format: int64
+
+    CreateAllocationDTO:
+      type: object
+      properties:
+        subject:
+          type: string
+        startAt:
+          type: string
+          format: date-time
+        endAt:
+          type: string
+          format: date-time
+        roomId:
+          type: integer
+          format: int64
+        employeeName:
+          type: string
+        employeeEmail:
+          type: string
+    AllocationDTO:
+      type: object
+      allOf:
+        - $ref: '#/components/schemas/CreateAllocationDTO'
+        - type: object
+          properties:
+            id:
+              type: integer
+              format: int64
+
+
+
 
     ResponseError:
       type: object
